Introduce edit functionality - create new function view, link new url, add form related to edit button and add js to make form visible - add new hidden inputs to be targeted by js to prepoulate form fields - bug related to population of image and price fields to be resolved

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -279,7 +279,7 @@ textarea:focus {
 }
 
 /* Submit button */
-#submitButton {
+.btn-submit {
     background-color: #D32F2F;
     color: #fff;
     font-weight: bold;
@@ -292,6 +292,6 @@ textarea:focus {
 }
 
 /* Submit button hover */
-#submitButton:hover {
+.btn-submit:hover {
     background-color: #B71C1C;
 }
